# frank_claw

./: .gitignore  Cargo.toml  README.md  agents.md  package.json  pnpm-lock.yaml  skills-lock.json  workflow.md
.reports/: dead-code-analysis.md
apps/clawx-cli/: Cargo.toml
apps/clawx-cli/src/: main.rs
apps/clawx-gui/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/clawx-gui/src/: App.tsx  main.tsx  styles.css
apps/clawx-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/clawx-gui/src/components/: AddProviderModal.tsx  (+30 more)
apps/clawx-service/: Cargo.toml
apps/clawx-service/src/: lib.rs  main.rs
apps/clawx-service/tests/: tools_wired.rs
backend/: PATCHES.md  README.md  UPSTREAM.md  pyproject.toml
backend-py/: pyproject.toml
backend-py/hermes_bridge/: __init__.py  __main__.py  app.py  auth.py
backend-py/hermes_bridge/api/: sessions.py  tools.py
backend-py/hermes_bridge/bridge/: hermes_factory.py  hermes_runner.py  skill_service.py  tool_service.py
backend-py/hermes_bridge/ws/: protocol.py
backend-py/tests/: test_app.py  test_auth.py  test_hermes_factory_live.py  test_info.py  test_main_entry.py  test_session_store.py  test_sessions_api.py  test_tools_api.py  test_ws_protocol.py
backend/docs/: hermes-internal-surface.md
backend/hermes_bridge/: __main__.py  app.py  config.py
backend/hermes_bridge/api/: agents.py  info.py  skills.py  toolsets.py
backend/hermes_bridge/bridge/: agent_store.py  hermes_factory.py  session_store.py
backend/hermes_bridge/ws/: chat.py
backend/pkg/auth/: oauth.go
backend/scripts/: init_config.py
backend/scripts/init-config/: main.go
backend/tests/: test_agent_store.py  test_agents_api.py  test_env_loading.py  test_hermes_factory.py  test_hermes_runner.py  test_info.py  test_info_check.py  test_init_config.py  test_skill_service.py  test_skills_api.py  test_tool_service.py  test_toolsets_api.py  test_ws_chat.py
backend/web/backend/middleware/: launcher_dashboard_auth.go  launcher_dashboard_auth_test.go
crates/clawx-api/: Cargo.toml
crates/clawx-api/src/: lib.rs
crates/clawx-api/src/middleware/: auth.rs
crates/clawx-api/src/routes/: agents.rs  channels.rs  conversations.rs  knowledge.rs  memories.rs  mod.rs  models.rs  skills.rs  system.rs  tasks.rs  tools.rs  vault.rs
crates/clawx-api/tests/: approval_route.rs  integration_test.rs
crates/clawx-artifact/: Cargo.toml
crates/clawx-artifact/src/: lib.rs
crates/clawx-channel/: Cargo.toml
crates/clawx-channel/src/: lark.rs  lib.rs  telegram.rs
crates/clawx-config/: Cargo.toml
crates/clawx-config/src/: lib.rs  loader.rs
crates/clawx-controlplane-client/: Cargo.toml
crates/clawx-controlplane-client/src/: lib.rs
crates/clawx-daemon/: Cargo.toml
crates/clawx-daemon/src/: lib.rs
crates/clawx-eventbus/: Cargo.toml
crates/clawx-eventbus/src/: lib.rs
crates/clawx-ffi/: Cargo.toml
crates/clawx-ffi/src/: lib.rs
crates/clawx-gateway/: Cargo.toml
crates/clawx-gateway/src/: lib.rs
crates/clawx-hal/: Cargo.toml
crates/clawx-hal/src/: fs_watcher.rs  keychain.rs  lib.rs
crates/clawx-kb/: Cargo.toml
crates/clawx-kb/src/: chunker.rs  embedding.rs  hybrid.rs  lib.rs  local_embedding.rs  parser.rs  qdrant.rs  reranker.rs  sqlite_kb.rs  stub.rs  tantivy_index.rs
crates/clawx-llm/: Cargo.toml
crates/clawx-llm/src/: anthropic.rs  lib.rs  openai.rs  router.rs  stub.rs  zhipu.rs
crates/clawx-memory/: Cargo.toml
crates/clawx-memory/src/: consolidation.rs  decay.rs  extraction.rs  lib.rs  long_term.rs  long_term_tests.rs  short_term.rs  stub.rs  vector_index.rs  working.rs
crates/clawx-memory/tests/: vector_index_test.rs
crates/clawx-ota/: Cargo.toml
crates/clawx-ota/src/: lib.rs
crates/clawx-runtime/: Cargo.toml
crates/clawx-runtime/src/: agent_loop.rs  agent_repo.rs  channel_handler.rs  channel_repo.rs  conversation_repo.rs  db.rs  dispatcher.rs  lib.rs  lifecycle.rs  model_repo.rs  notification_repo.rs  permission_repo.rs  run_recovery.rs  seed.rs  skill_loader.rs  skill_repo.rs  task_repo.rs  tool_loop.rs
crates/clawx-runtime/src/autonomy/: attention_policy.rs  executor.rs  mod.rs  task_parser.rs
crates/clawx-runtime/tests/: tool_loop_e2e.rs  v02_performance.rs
crates/clawx-scheduler/: Cargo.toml
crates/clawx-scheduler/src/: lib.rs
crates/clawx-security/: Cargo.toml
crates/clawx-security/src/: audit.rs  credential_inject.rs  dlp.rs  guard.rs  lib.rs  network.rs  prompt_defense.rs  rate_limit.rs  sandbox.rs  signing.rs  wasm_sandbox.rs
crates/clawx-security/tests/: signing_test.rs  wasm_sandbox_validation.rs
crates/clawx-skills/: Cargo.toml
crates/clawx-skills/src/: lib.rs
crates/clawx-tools/: Cargo.toml
crates/clawx-tools/src/: approval.rs  fs.rs  lib.rs  sandbox_profile.rs  shell.rs
crates/clawx-tools/tests/: fs_integration.rs  shell_integration.rs
crates/clawx-types/: Cargo.toml
crates/clawx-types/src/: agent.rs  autonomy.rs  channel.rs  config.rs  error.rs  event.rs  ids.rs  knowledge.rs  lib.rs  llm.rs  memory.rs  pagination.rs  permission.rs  security.rs  skill.rs  traits.rs  vault.rs
crates/clawx-types/tests/: types_test.rs
crates/clawx-vault/: Cargo.toml
crates/clawx-vault/src/: lib.rs  snapshot.rs  stub.rs
docs/: dev-plan-v0.1.md  dev-plan-v0.2-remaining.md  dev-plan-v0.2.md  ui-ux-prototype.md
docs/arch/: README.md  api-design.md  architecture-v2.1.md  architecture-v3.0.md  architecture.md  autonomy-architecture.md  competitive-analysis.md  crate-dependency-graph.md  data-model.md  decisions.md  memory-architecture.md  security-architecture.md
docs/prd/: clawx-modules-detail.md  clawx-v2.0.md  clawx-v3.0.md
docs/superpowers/plans/: 2026-04-13-clawx-next-dev-plan.md  2026-04-14-clawx-gui-pencil-alignment.md  2026-04-18-home-page-end-to-end-chat.md  2026-04-19-agentic-tool-use-phase1.md  2026-04-20-picoclaw-migration.md  2026-04-20-picoclaw-surface-audit.md  2026-04-21-hermes-agent-migration.md  2026-04-22-zhipu-chat-end-to-end.md  2026-04-26-persona-agents.md
rules/: general.md  python.md  rust.md  swift.md  typescript.md
(+87 files in other folders)
