[workspace]
resolver = "2"
members = [
    "crates/clawx-types",
    "crates/clawx-config",
    "crates/clawx-eventbus",
    "crates/clawx-llm",
    "crates/clawx-runtime",
    "crates/clawx-memory",
    "crates/clawx-kb",
    "crates/clawx-security",
    "crates/clawx-vault",
    "crates/clawx-scheduler",
    "crates/clawx-channel",
    "crates/clawx-hal",
    "crates/clawx-api",
    "crates/clawx-controlplane-client",
    "crates/clawx-ffi",
    "apps/clawx-cli",
    "apps/clawx-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }

# Regex (DLP scanning)
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Security
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"

# HAL / Platform
notify = "7"
security-framework = "3"

# Search / Vector
qdrant-client = "1"
tantivy = "0.22"

# Local ML inference (candle)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.5"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

# Internal crates
clawx-types = { path = "crates/clawx-types" }
clawx-config = { path = "crates/clawx-config" }
clawx-eventbus = { path = "crates/clawx-eventbus" }
clawx-llm = { path = "crates/clawx-llm" }
clawx-runtime = { path = "crates/clawx-runtime" }
clawx-memory = { path = "crates/clawx-memory" }
clawx-kb = { path = "crates/clawx-kb" }
clawx-security = { path = "crates/clawx-security" }
clawx-vault = { path = "crates/clawx-vault" }
clawx-scheduler = { path = "crates/clawx-scheduler" }
clawx-channel = { path = "crates/clawx-channel" }
clawx-hal = { path = "crates/clawx-hal" }
clawx-api = { path = "crates/clawx-api" }
clawx-controlplane-client = { path = "crates/clawx-controlplane-client" }
clawx-ffi = { path = "crates/clawx-ffi" }

[profile.release]
lto = true
codegen-units = 1
strip = true
