[project]
name = "hermes-bridge"
version = "0.1.0"
description = "FastAPI adapter exposing a Pico-compatible REST+WS contract on top of hermes-agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anyio>=4.6",
    # hermes-agent as a git dependency; pin a SHA once you verify the first
    # working commit in Task 3.1. Use `main` for now during bootstrap.
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "websockets>=13",
    "ruff>=0.7",
]

[project.scripts]
hermes-bridge = "hermes_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hermes_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
