[project]
name = "hermes-bridge"
version = "0.1.0"
description = "FastAPI adapter exposing a Pico-compatible REST+WS contract on top of hermes-agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anyio>=4.6",
    # hermes-agent is vendored under vendor/hermes_agent/. Source imported
    # from NousResearch/hermes-agent @ 7fc1e91 (0.10.0). See
    # [tool.uv.sources] below for the path mapping.
    "hermes-agent",
]

[tool.uv.sources]
hermes-agent = { path = "vendor/hermes_agent", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "websockets>=13",
    "ruff>=0.7",
]

[project.scripts]
hermes-bridge = "hermes_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hermes_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
