[package]
name = "clawx-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clawx"
path = "src/main.rs"

[dependencies]
clawx-types = { workspace = true }
clawx-controlplane-client = { workspace = true }
clawx-config = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
dirs = "6"
