[package]
name = "clawx-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clawx-service"
path = "src/main.rs"

[dependencies]
clawx-types = { workspace = true }
clawx-runtime = { workspace = true }
clawx-config = { workspace = true }
clawx-daemon = { workspace = true }
clawx-eventbus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
