[package]
name = "clawx-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clawx-service"
path = "src/main.rs"

[dependencies]
clawx-types = { workspace = true }
clawx-runtime = { workspace = true }
clawx-config = { workspace = true }
clawx-api = { workspace = true }
clawx-eventbus = { workspace = true }
clawx-hal = { workspace = true }
clawx-llm = { workspace = true }
clawx-memory = { workspace = true }
clawx-security = { workspace = true }
clawx-vault = { workspace = true }
clawx-kb = { workspace = true }
clawx-channel = { workspace = true }
clawx-scheduler = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
