[package]
name = "clawx-service"
version.workspace = true
edition.workspace = true

[lib]
name = "clawx_service"
path = "src/lib.rs"

[[bin]]
name = "clawx-service"
path = "src/main.rs"

[dependencies]
clawx-types = { workspace = true }
clawx-runtime = { workspace = true }
clawx-config = { workspace = true }
clawx-api = { workspace = true }
clawx-eventbus = { workspace = true }
clawx-llm = { workspace = true }
clawx-memory = { workspace = true }
clawx-security = { workspace = true }
clawx-vault = { workspace = true }
clawx-kb = { workspace = true }
clawx-channel = { workspace = true }
clawx-scheduler = { workspace = true }
clawx-tools = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
