[package]
name = "clawx-api"
version.workspace = true
edition.workspace = true

[dependencies]
clawx-types = { workspace = true }
clawx-runtime = { workspace = true }
clawx-llm = { workspace = true }
tokio = { workspace = true, features = ["net"] }
axum = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
http-body-util = "0.1"
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
async-trait = { workspace = true }
clawx-config = { workspace = true }
clawx-llm = { workspace = true }
clawx-memory = { workspace = true }
clawx-security = { workspace = true }
clawx-vault = { workspace = true }
clawx-kb = { workspace = true }
