[package]
name = "clawx-channel"
version.workspace = true
edition.workspace = true

[dependencies]
clawx-types = { workspace = true }
clawx-eventbus = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
