[package]
name = "clawx-controlplane-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Local control-plane client for ClawX — connects to clawx-api via UDS/HTTP"

[dependencies]
clawx-types = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
