[package]
name = "clawx-hal"
version.workspace = true
edition.workspace = true

[dependencies]
clawx-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
security-framework = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
