[package]
name = "clawx-kb"
version.workspace = true
edition.workspace = true

[dependencies]
clawx-types = { workspace = true }
clawx-llm = { workspace = true }
clawx-eventbus = { workspace = true }
clawx-hal = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
async-trait = { workspace = true }
sqlx = { workspace = true }
qdrant-client = { workspace = true }
tantivy = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
