[package]
name = "clawx-llm"
version.workspace = true
edition.workspace = true

[dependencies]
clawx-types = { workspace = true }
clawx-config = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
