[package]
name = "clawx-memory"
version.workspace = true
edition.workspace = true

[dependencies]
clawx-types = { workspace = true }
clawx-llm = { workspace = true }
clawx-eventbus = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
