[package]
name = "clawx-security"
version.workspace = true
edition.workspace = true

[dependencies]
clawx-types = { workspace = true }
clawx-config = { workspace = true }
clawx-eventbus = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
