[package]
name = "clawx-skills"
version.workspace = true
edition.workspace = true

[dependencies]
clawx-types = { workspace = true }
clawx-security = { workspace = true }
clawx-eventbus = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
