[package]
name = "clawx-vault"
version.workspace = true
edition.workspace = true

[dependencies]
clawx-types = { workspace = true }
clawx-eventbus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
